<resources>
    <string name="app_name">BDActivityUnifyDesign</string>
    <string name="login_page_edt_tel_hint">输入手机号</string>
    <string name="login_page_tv_send_code_text">获取验证码</string>
    <string name="login_page_edt_check_code_hint">输入验证码</string>
    <string name="login_page_btn_login_text">登录</string>
    <string name="updateinfo_page_edt_user_name_hint">用户名</string>
    <string name="updateinfo_page_tv_sex_tip_text">性别：</string>
    <string name="updateinfo_page_rdobtn_sex_man_text">男</string>
    <string name="updateinfo_page_rdobtn_sex_woman_text">女</string>
    <string name="updateinfo_page_rdobtn_sex_secret_text">保密</string>
    <string name="updateinfo_page_edt_user_address_hint">通讯地址</string>
    <string name="updateinfo_page_edt_user_account_hint">登录账号</string>
    <string name="updateinfo_page_edt_user_brith_hint">出生日期</string>
    <string name="updateinfo_page_edt_user_email_hint">Email</string>
    <string name="updateinfo_page_btn_modify_text">修改</string>

    <string name="toast_please_input_user_name">请输入用户名（必填）</string>
    <string name="toast_lease_input_tel_number">请输入手机号</string>
    <string name="login_page_tv_send_code_wait_time_resend">秒后可重发</string>
    <string name="toast_check_code_not_compared_or_not_input">验证码不一致，请检查拼写错误或输入！！</string>
    <string name="hello_page_tv_wait_enter_time_start">秒后进入</string>
</resources>
