<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.UpdateUserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/updateinfo_page_padding">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="@integer/updateinfo_page_head_img_weight"
            app:srcCompat="@drawable/bgimg" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:ems="10"
            android:hint="@string/updateinfo_page_edt_user_name_hint"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSexTips"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/updateinfo_page_tv_sex_tip_text" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/updateinfo_page_rdobtn_sex_man_text" />

                <RadioButton
                    android:id="@+id/radioButtonWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/updateinfo_page_rdobtn_sex_woman_text" />

                <RadioButton
                    android:id="@+id/radioButtonSecret"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/updateinfo_page_rdobtn_sex_secret_text" />
            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:ems="10"
            android:hint="@string/updateinfo_page_edt_user_address_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextAccount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:ems="10"
            android:hint="@string/updateinfo_page_edt_user_account_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextBrithDay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:ems="10"
            android:hint="@string/updateinfo_page_edt_user_brith_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:ems="10"
            android:hint="@string/updateinfo_page_edt_user_email_hint"
            android:inputType="textPersonName|textEmailSubject" />

        <Button
            android:id="@+id/buttonUpdateInfo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@integer/updateinfo_page_other_line_weight"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/updateinfo_page_modify_btn_margin_top"
            android:layout_marginBottom="@dimen/updateinfo_page_modify_btn_margin_bottom"
            android:onClick="onBtnUpdateUserInfoClicked"
            android:background="@drawable/draw_my_button"
            android:text="@string/updateinfo_page_btn_modify_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>