<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.LoginPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.ugex.savelar.bdactivityunifydesign.Controls.RainView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_head_img_weight"
            android:layout_gravity="center"
            app:ball_count="@integer/login_page_ball_count"
            app:ball_radius="@integer/login_page_ball_radius"
            app:bounce_level="@integer/login_page_ball_level"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTelNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/login_page_tel_weight"
                android:ems="10"
                android:hint="@string/login_page_edt_tel_hint"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageViewTelMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/login_page_tel_menu_weight"
                app:srcCompat="@drawable/bgimg" />

            <TextView
                android:id="@+id/textViewSendCheckCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/login_page_tel_send_code_weight"
                android:gravity="center"
                android:text="@string/login_page_tv_send_code_text" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextCheckCode"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:ems="10"
            android:hint="@string/login_page_edt_check_code_hint"

            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:layout_gravity="center"
            android:background="@drawable/draw_my_button"
            android:text="@string/login_page_btn_login_text"
            android:onClick="onBtnLoginCliked" />
        <Button
            android:id="@+id/buttonGotoMain"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_other_line_weight"
            android:layout_gravity="center"
            android:background="@drawable/draw_my_button"
            android:text="试玩"
            android:onClick="onBtnGotoMainCliked" />
        <Chronometer
            android:id="@+id/chronometerWaitTimer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"/>
        <View
            android:id="@+id/viewSpaceHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/login_page_space_holder_weight">

        </View>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>